--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
+    "reset-css": "^5.0.2",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
