--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@craco/craco": "^7.1.0",
     "antd": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "reset-css": "^5.0.2",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
